--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,24 @@
-/* цвет основного текста #212121 */
+/* основной цвет текста #212121 */
 /* вторичный цвет текста #757575 */
 /* имейл и телефон в футере rgba(255, 255, 255, 0,6) */
-/* белый #FFFFFF */
 /* акцент #2196F3 */
+/* основной белый фон #FFFFFF */
 /* серый фон #F5F4FA */
 /* темно синий фон героя и футера #2F303A */
 
 :root {
-  --accent-color: #2196f3;
   --main-text-color: #212121;
-  --backgr-but-color: #f5f4fa;
+  --secondary-text-color: #757575;
+  --accent-color: #2196f3;
+  --backgr-btn-color: #f5f4fa;
 }
 body {
-  background-color: #fff;
+  background-color: #ffffff;
   color: var(--main-text-color);
 }
 /* Основной цвет логотипа */
-.logo {
+.header-logo,
+.footer-logo {
   color: inherit;
 }
 /* Красит часть логотипа в синий цвет */
@@ -24,8 +26,11 @@ body {
   color: var(--accent-color);
 }
 /* вторичный цвет текста */
-.section-text {
-  color: #757575;
+.contact-text,
+.feature-text,
+.team-text,
+.work-text {
+  color: var(--secondary-text-color);
 }
 /* Убираем точки перед списком */
 .list {
@@ -36,38 +41,38 @@ body {
   text-decoration: none;
 }
 /* элементы навигации в хидере студии*/
-.site-nav .link:hover,
-.site-nav .link:focus {
+.nav-list .link:hover,
+.nav-list .link:focus {
   color: var(--accent-color);
 }
-.site-nav .link.current {
+.nav-list .link.current {
   color: var(--accent-color);
 }
-.site-nav .link {
+.nav-list .link {
   color: inherit;
 }
-.contact-nav .link:hover,
-.contact-nav .link:focus {
+.contact-list .link:hover,
+.contact-list .link:focus {
   color: var(--accent-color);
 }
 /* кнопки фильтров в портфолио*/
-.filter .but:hover,
-.filter .but:focus {
+.filter .btn:hover,
+.filter .btn:focus {
   color: white;
   background-color: var(--accent-color);
 }
-.filter .but.current {
+.filter .btn.current {
   color: white;
   background-color: var(--accent-color);
 }
-.but {
+.btn {
   border-color: transparent;
 }
-.filter .but {
-  background-color: var(--backgr-but-color);
+.filter .btn {
+  background-color: var(--backgr-btn-color);
 }
 /* Кнопка героя */
-.hero .but {
+.hero .btn {
   background-color: var(--accent-color);
   color: white;
 }
