--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ body {
 }
 /* Кнопка героя */
 .hero-btn {
+  font-family: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -108,6 +109,7 @@ body {
   color: var(--third-text-color);
   background-color: var(--accent-color);
   border-color: transparent;
+  cursor: pointer;
 }
 
 /*-------НАШИ ОСОБЕННОСТИ------- */
@@ -123,7 +125,6 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
 }
 /*-------ЧЕМ ЗАНИМАЕМСЯ------- */
 .activity-title {
@@ -161,6 +162,7 @@ body {
 
 /*---КНОПКИ ФИЛЬТРОВ В ПОРТФОЛИО---*/
 .filter-btn {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -169,6 +171,7 @@ body {
   color: #212121;
   background-color: var(--backgr-btn-color);
   border-color: transparent;
+  cursor: pointer;
 }
 .filter-btn:hover,
 .filter-btn:focus {
@@ -218,4 +221,8 @@ body {
 }
 .footer-link.adr {
   color: var(--third-text-color);
+}
+.footer-link:hover,
+.footer-link:focus {
+  color: var(--accent-color);
 }
