--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@ body {
 
 /*-------НАШИ ОСОБЕННОСТИ------- */
 .feature-title {
-  font-weight: bold;
   font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
@@ -127,7 +126,6 @@ body {
 }
 /*-------ЧЕМ ЗАНИМАЕМСЯ------- */
 .activity-title {
-  font-weight: bold;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
@@ -136,7 +134,6 @@ body {
 
 /*-------НАША КОМАНДА------- */
 .team-title {
-  font-weight: bold;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
@@ -181,7 +178,6 @@ body {
 
 /*--------ПРИМЕРЫ РАБОТ ПОРТФОЛИО------ */
 .work-title {
-  font-weight: bold;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -207,6 +203,7 @@ body {
 }
 .footer-link {
   font-style: normal;
+  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
